--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,9 @@
 /*------------------------------------------------------------------
-Project:  
-Version:  
-Last change:  
-Assigned to:  Le Xuan Bach
-Primary use:  Company
+Project:  1
+Version:  1
+Last change:  Spring Semester :)
+Assigned to:  Nathalie Bailey
+Primary use:  CIS454
 -------------------------------------------------------------------*/
 /*------------------------------------------------------------------
 [LAYOUT]
@@ -285,46 +285,6 @@ iframe {
         transform: scale(1);
         opacity: 0;
     }
-}
-
-/*[ BACK TO TOP ]
-///////////////////////////////////////////////////////////
-*/
-.btn-back-to-top {
-  display: none;
-  position: fixed;
-  width: 40px;
-  height: 40px;
-  bottom: 40px;
-  right: 40px;
-  background-color: black;
-  opacity: 0.5;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-  border-radius: 4px;
-  transition: all 0.4s;
-  -webkit-transition: all 0.4s;
-  -o-transition: all 0.4s;
-  -moz-transition: all 0.4s;
-}
-
-.symbol-btn-back-to-top {
-  font-size: 22px;
-  color: white;
-  line-height: 1em;
-}
-
-.btn-back-to-top:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-@media (max-width: 576px) {
-  .btn-back-to-top {
-    bottom: 15px;
-    right: 15px;
-  }
 }
 
 /*[ Restyle Select2 ]
@@ -955,201 +915,6 @@ li.sale-noti > a {
 }
 
 
-
-/*[ Header Mobile ]
->>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>*/
-.wrap_header_mobile {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  min-height: 80px;
-  padding-left: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  background-color: white;
-  display: none;
-}
-
-/*[ Logo mobile ]
------------------------------------------------------------*/
-.logo-mobile {
-  display: block;
-}
-
-.logo-mobile img {
-  max-height: 27px;
-}
-
-/*[ btn show menu ]
------------------------------------------------------------*/
-.btn-show-menu {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-}
-
-.hamburger {
-  -webkit-transform: scale(0.8);
-  -moz-transform: scale(0.8);
-  -ms-transform: scale(0.8);
-  -o-transform: scale(0.8);
-  transform: scale(0.8);
-  margin-top: 5px;
-}
-
-
-/*[ Header icon mobile ]
------------------------------------------------------------*/
-.header-icons-mobile {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  margin-right: 15px;
-}
-.linedivide2 {
-  display: block;
-  height: 20px;
-  width: 1px;
-  margin-left: 10px;
-  margin-right: 10px;
-  margin-top: 5px;
-}
-
-.header-icons-mobile .header-cart {
-  width: 300px;
-  top: 190%;
-  right: -80px;  
-  z-index: 1100;
-  transform-origin: top right;
-}
-
-/*[ Menu mobile ]
------------------------------------------------------------*/
-.wrap-side-menu {
-  width: 100%;
-  background-color: white;
-  display: none;
-  border-top: 1px solid #ececec;
-}
-
-.side-menu {
-  width: 100%;
-}
-
-.side-menu li {
-  list-style-type: none;
-}
-
-.side-menu .main-menu {margin-bottom: 0;}
-
-.item-menu-mobile {
-  background-color: #e65540;
-}
-
-.side-menu .main-menu > li > a {
-  padding-left: 20px;
-  font-family: Montserrat-Regular;
-  font-size: 15px;
-  color: white;
-  line-height: 2.86;
-}
-
-.side-menu .main-menu > li {
-  color: white;
-  position: relative;
-}
-
-
-.side-menu .main-menu .arrow-main-menu {
-  font-size: 14px;
-  position: absolute;
-  right: 20px;
-  top: 5px;
-  padding: 10px;
-  -webkit-transition: all 0.4s !important;
-  -o-transition: all 0.4s !important;
-  -moz-transition: all 0.4s !important;
-  transition: all 0.4s !important;
-}
-
-.side-menu .main-menu .arrow-main-menu:hover {
-  cursor: pointer;
-}
-
-.turn-arrow {
-  -webkit-transform: rotate(90deg);
-  -moz-transform: rotate(90deg);
-  -ms-transform: rotate(90deg);
-  -o-transform: rotate(90deg);
-  transform: rotate(90deg);
-}
-
-.side-menu .sub-menu a {
-  padding-left: 20px;
-  font-family: Montserrat-Regular;
-  font-size: 13px;
-  color: #333333;
-  line-height: 2.5;
-}
-
-.side-menu .sub-menu > li {
-  padding-left: 12px;
-  padding-top: 
-}
-
-.side-menu .sub-menu a:hover {
-  text-decoration: none;
-  padding-left: 20px;
-  color: #e65540 !important;
-}
-
-.side-menu .sub-menu {
-  background-color: white;
-  display: none;
-}
-
-@media (min-width: 992px){
-  .wrap-side-menu {
-    display: none;
-  }
-}
-
-/* ------------------------------------ */
-.item-topbar-mobile {
-  border-bottom: 1px solid #ececec;
-}
-
-.topbar-child2-mobile {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.topbar-social-moblie {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: flex;
-  align-items: center;
-}
 
 
 /*[ Header2 ]
